--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,9 @@ h3 {
 p {
   margin-top: 0;
 }
+a {
+  text-decoration: none;
+}
 
 @media screen and (min-width: 1024px) {
   body {
@@ -45,5 +48,26 @@ p {
   }
   h3 {
     font-size: 2.4rem;
+  }
+}
+
+.link-arrow {
+  color: var(--color-accent);
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 2rem;
+}
+.link-arrow::after {
+  content: "-->";
+  margin-left: 5px;
+  transition: margin 0.15s;
+}
+.link-arrow:hover::after {
+  margin-left: 10px;
+}
+
+@media screen and (min-width: 1024px) {
+  .link-arrow {
+    font-size: 1.5rem;
   }
 }
