--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ a {
     font-size: 2.4rem;
   }
 }
-
+/*Links*/
 .link-arrow {
   color: var(--color-accent);
   text-transform: uppercase;
@@ -71,6 +71,7 @@ a {
     font-size: 1.5rem;
   }
 }
+/*badges*/
 .badge {
   border-radius: 20px;
   color: #fff;
@@ -94,5 +95,31 @@ a {
   }
   .badge--small {
     font-size: 1.2rem;
+  }
+}
+
+/*Lists*/
+.list {
+  list-style: none;
+  padding-left: 0;
+  color: var(--color-headings);
+}
+
+.list--inline .list__item {
+  display: inline-block;
+  margin-right: 2rem;
+}
+
+.list--tick {
+  list-style-image: url(../images/tick.svg);
+  padding-left: 3rem;
+}
+.list--tick .list__item {
+  padding-left: 0.5rem;
+  margin-bottom: 1rem;
+}
+@media screen and (min-width: 1024px) {
+  .list--tick .list__item {
+    padding-left: 0;
   }
 }
