--- a/css/style.css
+++ b/css/style.css
@@ -123,3 +123,22 @@ a {
     padding-left: 0;
   }
 }
+/*Icons*/
+.icon {
+  width: 40px;
+  height: 40px;
+}
+
+.icon--primary {
+  fill: var(--color-primary);
+}
+
+.icon-container {
+  width: 65px;
+  height: 65px;
+  background-color: #f3f9fa;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+}
