--- a/css/style.css
+++ b/css/style.css
@@ -376,3 +376,19 @@ a {
     font-size: 1.6rem;
   }
 }
+
+/*grid*/
+.grid {
+  display: grid;
+}
+
+@media screen and (min-width: 768px) {
+  .grid--cols2 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (min-width: 1024px) {
+  .grid--cols3 {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
