--- a/css/style.css
+++ b/css/style.css
@@ -137,9 +137,17 @@ a {
   width: 40px;
   height: 40px;
 }
+.icon--small {
+  width: 30px;
+  height: 30px;
+}
 
 .icon--primary {
   fill: var(--color-primary);
+}
+
+.icon--white {
+  fill: #fff;
 }
 
 .icon-container {
@@ -150,6 +158,10 @@ a {
   justify-content: center;
   align-items: center;
   border-radius: 100%;
+}
+
+.icon-container--accent {
+  background: var(--color-accent);
 }
 /*Button*/
 .btn {
@@ -390,5 +402,36 @@ a {
 @media screen and (min-width: 1024px) {
   .grid--cols3 {
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+/*Testimonial*/
+.testimonial {
+  padding: 3rem;
+}
+.testimonial__image {
+  position: relative;
+}
+.testimonial__image > img {
+  width: 100%;
+}
+
+.testimonial__image > .icon-container {
+  position: absolute;
+  top: 3rem;
+  right: -32px;
+}
+
+@media screen and (min-width: 768px) {
+  .testimonial .quote,
+  .testimonial .quote__author {
+    font-size: 2.4rem;
+  }
+  .testimonial .quote {
+    margin-top: 6rem;
+    margin-left: 6rem;
+  }
+  .testimonial .quote__organization {
+    font-size: 1.6rem;
   }
 }
