--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,11 @@ a {
   white-space: nowrap;
 }
 
+.btn--stretched {
+  padding-left: 6rem;
+  padding-right: 6rem;
+}
+
 .btn--primary {
   background: var(--color-primary);
   color: #fff;
@@ -433,5 +438,42 @@ a {
   }
   .testimonial .quote__organization {
     font-size: 1.6rem;
+  }
+}
+
+/*Callouts*/
+.callout {
+  padding: 4rem;
+  border-radius: 5px;
+  color: #fff;
+}
+.callout--primary {
+  background: var(--color-primary);
+}
+.callout__heading {
+  margin-top: 0;
+  color: #fff;
+  font-size: 3rem;
+}
+
+.callout .btn {
+  justify-self: center;
+  align-self: center;
+}
+
+.callout__content {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .callout .grid--cols2 {
+    grid-template-columns: 1fr auto;
+  }
+  .callout__content {
+    text-align: left;
+  }
+  .callout .btn {
+    justify-self: start;
+    margin: 0 2rem;
   }
 }
