--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ h1,
 h2,
 h3 {
   color: var(--color-headings);
+  line-height: 1.1;
   margin-bottom: 1rem;
 }
 h1 {
@@ -594,5 +595,29 @@ nav.collapsible--expanded .nav__toggler {
   }
   .nav__item {
     border: 0;
+  }
+}
+
+/*Hero*/
+.hero {
+  clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+}
+.hero__tagline {
+  font-size: 2rem;
+  color: #b9c3cf;
+  margin: 2rem 0 5rem;
+  letter-spacing: 1px;
+}
+.hero__image {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    padding-top: 0;
+  }
+  .hero__content {
+    text-align: left;
+    align-self: center;
   }
 }
