Define plans block

--- a/css/style.css
+++ b/css/style.css
@@ -288,11 +288,17 @@ a {
   background-color: var(--color-secondary);
   color: #fff;
 }
+.card--primary .badge--primary {
+  background: #126de4;
+}
 .card--secondary .badge--secondary {
   background: #02cdf1;
 }
 
 /*Plans*/
+.plan {
+  transition: transform 0.2s ease-out;
+}
 .plan__name {
   color: #fff;
   margin: 0;
@@ -317,6 +323,7 @@ a {
   margin-bottom: 2rem;
   letter-spacing: 1px;
 }
+
 .plan--popular .card__header {
   position: relative;
 }
@@ -328,6 +335,13 @@ a {
   position: absolute;
   right: 5%;
   top: -6px;
+}
+
+.plan:hover {
+  transform: scale(1.05);
+}
+.plan--popular:hover {
+  transform: scale(1.15);
 }
 
 @media screen and (min-width: 1024px) {
@@ -342,6 +356,9 @@ a {
   }
   .plan__description {
     font-size: 1.7rem;
+  }
+  .plan--popular {
+    transform: scale(1.1);
   }
 }
 
@@ -652,4 +669,13 @@ nav.collapsible--expanded .nav__toggler {
   .block-domain__prices {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
+}
+
+/*Plans Block*/
+.block-plans .grid {
+  gap: 8rem 4rem;
+}
+.block-plans .card {
+  max-width: 500px;
+  margin: 0 auto;
 }
