--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body {
   font-size: 2.4rem;
   line-height: 1.5;
 }
+
 h1,
 h2,
 h3 {
@@ -174,7 +175,7 @@ a {
   font-weight: 600;
   outline: 0;
   margin: 1rem 0;
-  padding: 2rem 3rem;
+  padding: 2rem 3vw;
   text-transform: uppercase;
   text-align: center;
   white-space: nowrap;
@@ -258,6 +259,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -662,8 +664,9 @@ nav.collapsible--expanded .nav__toggler {
   max-width: 670px;
 }
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
@@ -677,7 +680,6 @@ nav.collapsible--expanded .nav__toggler {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
 }
-
 /*Plans Block*/
 .block-plans .grid {
   gap: 8rem 4rem;
